Pointer totally supported

--- a/POIProxy/POIProxy.csproj
+++ b/POIProxy/POIProxy.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Controllers\SessionsController.cs" />
     <Compile Include="Controllers\SlidesController.cs" />
     <Compile Include="Handlers\POIProxyPresCtrlHandler.cs" />
+    <Compile Include="Handlers\POIProxyPtrCtrlHandler.cs" />
     <Compile Include="Handlers\POIProxyWBCtrlHandler.cs" />
     <Compile Include="POISessionPresController.cs" />
     <Compile Include="POIProxyGlobalVar.cs" />
