--- a/POIProxy/POIProxy.csproj
+++ b/POIProxy/POIProxy.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Controllers\SlidesController.cs" />
     <Compile Include="Controllers\StreamingController.cs" />
     <Compile Include="Controllers\VideosController.cs" />
+    <Compile Include="Handlers\POIProxyAudioContentHandler.cs" />
     <Compile Include="Handlers\POIProxyPresCtrlHandler.cs" />
     <Compile Include="Handlers\POIProxyPtrCtrlHandler.cs" />
     <Compile Include="Handlers\POIProxyWBCtrlHandler.cs" />
