--- a/POIProxy/POIProxy.csproj
+++ b/POIProxy/POIProxy.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Handlers\POIProxyPresCtrlHandler.cs" />
     <Compile Include="Handlers\POIProxyPtrCtrlHandler.cs" />
     <Compile Include="Handlers\POIProxyWBCtrlHandler.cs" />
+    <Compile Include="POIOfflineSessionCache.cs" />
     <Compile Include="POISessionPresController.cs" />
     <Compile Include="POIProxyGlobalVar.cs" />
     <Compile Include="POISession.cs" />
