--- a/POIProxy.csproj
+++ b/POIProxy.csproj
@@ -126,10 +126,12 @@
   <ItemGroup>
     <Compile Include="Controllers\AudioUploadController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProxyStatusController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Handlers\POIProxyAudioContentHandler.cs" />
+    <Compile Include="Handlers\POIProxyLogHandler.cs" />
     <Compile Include="Handlers\POIProxyPresCtrlHandler.cs" />
     <Compile Include="Handlers\POIProxyPtrCtrlHandler.cs" />
     <Compile Include="Handlers\POIProxyWBCtrlHandler.cs" />
