--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -12,8 +12,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DNSServer" value="http://192.168.0.130/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://192.168.0.130/POIWebService/contentServer/" />
-    <add key="ProxyServerIP" value="192.168.0.100" />
-    <add key="ProxyServerPort" value="81" />
+    <add key="ProxyServerIP" value="192.168.0.150" />
+    <add key="ProxyServerPort" value="82" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
