--- a/POIProxy.csproj
+++ b/POIProxy.csproj
@@ -152,6 +152,7 @@
       <DependentUpon>POIEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AudioUploadController.cs" />
+    <Compile Include="Controllers\ComClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProxyStatusController.cs" />
     <Compile Include="Controllers\WxToProxyController.cs" />
@@ -224,6 +225,7 @@
     <Compile Include="Src\POIProxyGlobalVar.cs" />
     <Compile Include="Src\POIProxyHub.cs" />
     <Compile Include="Src\POIProxyKernel.cs" />
+    <Compile Include="Src\POIProxyPushNotifier.cs" />
     <Compile Include="Src\POIProxyToWxApi.cs" />
     <Compile Include="Src\POISession.cs" />
     <Compile Include="Src\POISessionManager.cs" />
@@ -299,6 +301,9 @@
     <Content Include="Scripts\jquery-1.6.4.min.js" />
     <Content Include="Scripts\jquery.signalR-1.1.1.js" />
     <Content Include="Scripts\jquery.signalR-1.1.1.min.js" />
+    <Content Include="Scripts\poiComClient.html" />
+    <Content Include="Scripts\poiComClientAndroid.html" />
+    <Content Include="Scripts\poiComClientIos.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -311,6 +316,8 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\IndexLayout.cshtml" />
+    <Content Include="Views\ComClient\Index.cshtml" />
+    <Content Include="Views\ComClient\IndexLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
