--- a/POIProxy.csproj
+++ b/POIProxy.csproj
@@ -181,6 +181,7 @@
     <Compile Include="login_attempts.cs">
       <DependentUpon>POIEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ComClientViewModel.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="organization.cs">
       <DependentUpon>POIEntities.tt</DependentUpon>
@@ -292,6 +293,7 @@
       <LastGenOutput>POIEntities.cs</LastGenOutput>
     </Content>
     <None Include="Properties\PublishProfiles\Alibaba14.229.pubxml" />
+    <None Include="Properties\PublishProfiles\Alibaba14.229_8092.pubxml" />
     <None Include="Properties\PublishProfiles\ProxyPublish.pubxml" />
     <None Include="Properties\PublishProfiles\Publish100.pubxml" />
     <None Include="Properties\PublishProfiles\Publish100ftp.pubxml" />
@@ -318,6 +320,7 @@
     <Content Include="Views\Home\IndexLayout.cshtml" />
     <Content Include="Views\ComClient\Index.cshtml" />
     <Content Include="Views\ComClient\IndexLayout.cshtml" />
+    <Content Include="Views\ComClient\Ios.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
