--- a/POIProxy.csproj
+++ b/POIProxy.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Src\POIProxyHub.cs" />
     <Compile Include="Src\POIProxyKernel.cs" />
     <Compile Include="Src\POIProxyPushNotifier.cs" />
+    <Compile Include="Src\POIProxySessionManager.cs" />
     <Compile Include="Src\POIProxyToWxApi.cs" />
     <Compile Include="Src\POISession.cs" />
     <Compile Include="Src\POISessionManager.cs" />
@@ -324,6 +325,7 @@
       <DependentUpon>POIEntities.edmx</DependentUpon>
       <LastGenOutput>POIEntities.cs</LastGenOutput>
     </Content>
+    <None Include="Properties\PublishProfiles\Alibaba.14.229_8094.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba14.229.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba14.229_8092.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba14.229_8093.pubxml" />
