--- a/POIProxy.csproj
+++ b/POIProxy.csproj
@@ -329,6 +329,7 @@
     <None Include="Properties\PublishProfiles\Alibaba14.229.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba14.229_8092.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba14.229_8093.pubxml" />
+    <None Include="Properties\PublishProfiles\Alibaba218.244.132.113_8092.pubxml" />
     <None Include="Properties\PublishProfiles\ProxyPublish.pubxml" />
     <None Include="Properties\PublishProfiles\Publish100.pubxml" />
     <None Include="Properties\PublishProfiles\Publish100ftp.pubxml" />
