--- a/Web.config
+++ b/Web.config
@@ -23,22 +23,22 @@
     <add key="UP_HOST" value="http://up.qiniu.com" />
     <add key="RSF_HOST" value="http://rsf.Qbox.me" />
 
-    <add key="MAX_SESSION_USER" value="10"/>
+    <add key="MAX_SESSION_USER" value="10" />
     
-    <!--<add key="DNSServer" value="http://www.uwenda.com/POIWebService/dnsServer/interface.php" />
+    <add key="DNSServer" value="http://www.uwenda.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.uwenda.com/POIWebService/contentServer/" />
-    <add key="ProxyServerIP" value="112.124.14.229:8091" />
+    <add key="ProxyServerIP" value="218.244.132.113:8092" />
     <add key="ProxyServerPort" value="81" />
-    <add key="ProxyPort" value="8091" />
-    <add key="ProxyHost" value="http://112.124.14.229" />
+    <add key="ProxyPort" value="8092" />
+    <add key="ProxyHost" value="http://218.244.132.113" />
     <add key="DbHost" value="puvsadb1.mysql.rds.aliyuncs.com" />
     <add key="DbName" value="uwenda" />
     <add key="DbUsername" value="poi" />
     <add key="DbPassword" value="public11223" />
     <add key="WxServer" value="http://www.uwenda.com/POIWebService/dnsServer/weixinApi.php" />
-    <add key="ParseAppId" value="w8asEzg0uyaKrahtp9fzkfjH0gqChLLiWezklL1v"/>
-    <add key="ParseAppKey" value="wWAVbEjQKW5WvW1ZJwIeEcLbGxMbvorJKhBNS6bk"/>
-    <add key="QiniuBucket" value="puvsa"/>-->
+    <add key="ParseAppId" value="w8asEzg0uyaKrahtp9fzkfjH0gqChLLiWezklL1v" />
+    <add key="ParseAppKey" value="wWAVbEjQKW5WvW1ZJwIeEcLbGxMbvorJKhBNS6bk" />
+    <add key="QiniuBucket" value="puvsa" />
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
@@ -55,7 +55,7 @@
     <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
     <add key="QiniuBucket" value="puvsa" />-->
 
-    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8092" />
     <add key="ProxyServerPort" value="81" />
@@ -68,7 +68,7 @@
     <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
     <add key="ParseAppId" value="g7VjP9s5MSVTxPyOFRsT0VQlImUPmcUVHqblEVE1" />
     <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
-    <add key="QiniuBucket" value="puvsa" />
+    <add key="QiniuBucket" value="puvsa" />-->
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService-test/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService-test/contentServer/" />
