--- a/packages.config
+++ b/packages.config
@@ -30,8 +30,9 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="parse" version="1.2.14" targetFramework="net45" />
   <package id="Qiniu" version="6.1.1" targetFramework="net45" />
-  <package id="ServiceStack.Common" version="4.0.20" targetFramework="net45" />
-  <package id="ServiceStack.Interfaces" version="4.0.20" targetFramework="net45" />
-  <package id="ServiceStack.Redis" version="4.0.20" targetFramework="net45" />
-  <package id="ServiceStack.Text" version="4.0.20" targetFramework="net45" />
+  <package id="ServiceStack" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.Common" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.Redis" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net45" />
 </packages>
