--- a/Web.config
+++ b/Web.config
@@ -25,7 +25,7 @@
 
     <add key="MAX_SESSION_USER" value="10" />
     
-    <add key="DNSServer" value="http://www.uwenda.com/POIWebService/dnsServer/interface.php" />
+    <!--<add key="DNSServer" value="http://www.uwenda.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.uwenda.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8092" />
     <add key="ProxyServerPort" value="81" />
@@ -35,10 +35,12 @@
     <add key="DbName" value="uwenda" />
     <add key="DbUsername" value="poi" />
     <add key="DbPassword" value="public11223" />
+    <add key="RedisHost" value="localhost"/>
+    <add key="RedisPort" value="6379" />
     <add key="WxServer" value="http://www.uwenda.com/POIWebService/dnsServer/weixinApi.php" />
     <add key="ParseAppId" value="w8asEzg0uyaKrahtp9fzkfjH0gqChLLiWezklL1v" />
     <add key="ParseAppKey" value="wWAVbEjQKW5WvW1ZJwIeEcLbGxMbvorJKhBNS6bk" />
-    <add key="QiniuBucket" value="puvsa" />
+    <add key="QiniuBucket" value="puvsa" />-->
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
@@ -55,20 +57,22 @@
     <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
     <add key="QiniuBucket" value="puvsa" />-->
 
-    <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
-    <add key="ProxyServerIP" value="218.244.132.113:8092" />
+    <add key="ProxyServerIP" value="218.244.132.113:8091" />
     <add key="ProxyServerPort" value="81" />
-    <add key="ProxyPort" value="8092" />
+    <add key="ProxyPort" value="8091" />
     <add key="ProxyHost" value="http://218.244.132.113" />
     <add key="DbHost" value="115.29.207.236" />
     <add key="DbName" value="uwenda" />
     <add key="DbUsername" value="poi" />
     <add key="DbPassword" value="public11223" />
+    <add key="RedisHost" value="115.29.207.236"/>
+    <add key="RedisPort" value="6379" />
     <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
     <add key="ParseAppId" value="g7VjP9s5MSVTxPyOFRsT0VQlImUPmcUVHqblEVE1" />
     <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
-    <add key="QiniuBucket" value="puvsa" />-->
+    <add key="QiniuBucket" value="puvsa" />
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService-test/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService-test/contentServer/" />
