--- a/Web.config
+++ b/Web.config
@@ -57,11 +57,28 @@
     <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
     <add key="QiniuBucket" value="puvsa" />-->
 
-    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8091" />
     <add key="ProxyServerPort" value="81" />
     <add key="ProxyPort" value="8091" />
+    <add key="ProxyHost" value="http://218.244.132.113" />
+    <add key="DbHost" value="115.29.207.236" />
+    <add key="DbName" value="uwenda" />
+    <add key="DbUsername" value="poi" />
+    <add key="DbPassword" value="public11223" />
+    <add key="RedisHost" value="115.29.207.236"/>
+    <add key="RedisPort" value="6379" />
+    <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="ParseAppId" value="g7VjP9s5MSVTxPyOFRsT0VQlImUPmcUVHqblEVE1" />
+    <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
+    <add key="QiniuBucket" value="puvsa" />-->
+
+    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
+    <add key="ProxyServerIP" value="218.244.132.113:8093" />
+    <add key="ProxyServerPort" value="81" />
+    <add key="ProxyPort" value="8093" />
     <add key="ProxyHost" value="http://218.244.132.113" />
     <add key="DbHost" value="115.29.207.236" />
     <add key="DbName" value="uwenda" />
