app online version

--- a/Web.config
+++ b/Web.config
@@ -42,6 +42,27 @@
     <add key="ParseAppKey" value="wWAVbEjQKW5WvW1ZJwIeEcLbGxMbvorJKhBNS6bk" />
     <add key="QiniuBucket" value="puvsa" />-->
     
+    <add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
+    <add key="ContentServer" value="http://www.uwenda.com/POIWebService_release/contentServer/" />
+    <add key="ProxyServerIP" value="112.124.14.229:8091" />
+    <add key="ProxyServerPort" value="81" />
+    <add key="ProxyPort" value="8091" />
+    <add key="ProxyHost" value="http://112.124.14.229" />
+    <add key="DbHost" value="puvsadb1.mysql.rds.aliyuncs.com" />
+    <add key="DbName" value="uwenda" />
+    <add key="DbUsername" value="poi" />
+    <add key="DbPassword" value="public11223" />
+    <add key="RedisHost" value="115.29.8.28"/>
+    <add key="RedisPort" value="6379" />
+    <add key="WxServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/weixinApi.php" />
+    <add key="ParseAppId" value="g7VjP9s5MSVTxPyOFRsT0VQlImUPmcUVHqblEVE1" />
+    <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
+    <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
+    <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
+    <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
+    <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
+    <add key="QiniuBucket" value="puvsa" />
+    
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="112.124.14.229:8092" />
@@ -74,7 +95,7 @@
     <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
     <add key="QiniuBucket" value="puvsa" />-->
 
-    <add key="DNSServer" value="http://www.qdaan.com/POIWebService-dev/dnsServer/interface.php" />
+    <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService-dev/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService-dev/contentServer/" />
     <add key="ProxyServerIP" value="112.124.14.229:8091" />
     <add key="ProxyServerPort" value="81" />
@@ -93,7 +114,7 @@
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
     <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="puvsa" />
+    <add key="QiniuBucket" value="puvsa" />-->
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService-test/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService-test/contentServer/" />
