--- a/POIProxy.csproj
+++ b/POIProxy.csproj
@@ -237,6 +237,7 @@
     <None Include="Properties\PublishProfiles\Alibaba14.229.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba14.229_8092.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba14.229_8093.pubxml" />
+    <None Include="Properties\PublishProfiles\Alibaba218.244.132.113.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba218.244.132.113_8091.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba218.244.132.113_8092.pubxml" />
     <None Include="Properties\PublishProfiles\Alibaba218.244.132.113_8093.pubxml" />
