--- a/Web.config
+++ b/Web.config
@@ -25,24 +25,28 @@
 
     <add key="MAX_SESSION_USER" value="10" />
     
-    <!--<add key="DNSServer" value="http://www.uwenda.com/POIWebService/dnsServer/interface.php" />
-    <add key="ContentServer" value="http://www.uwenda.com/POIWebService/contentServer/" />
-    <add key="ProxyServerIP" value="218.244.132.113:8092" />
+    <!--dev env-->
+    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
+    <add key="ProxyServerIP" value="218.244.132.113:8091" />
     <add key="ProxyServerPort" value="81" />
-    <add key="ProxyPort" value="8092" />
+    <add key="ProxyPort" value="8091" />
     <add key="ProxyHost" value="http://218.244.132.113" />
-    <add key="DbHost" value="puvsadb1.mysql.rds.aliyuncs.com" />
+    <add key="DbHost" value="115.29.207.236" />
     <add key="DbName" value="uwenda" />
     <add key="DbUsername" value="poi" />
     <add key="DbPassword" value="public11223" />
-    <add key="RedisHost" value="localhost"/>
+    <add key="RedisHost" value="115.29.207.236"/>
     <add key="RedisPort" value="6379" />
-    <add key="WxServer" value="http://www.uwenda.com/POIWebService/dnsServer/weixinApi.php" />
-    <add key="ParseAppId" value="w8asEzg0uyaKrahtp9fzkfjH0gqChLLiWezklL1v" />
-    <add key="ParseAppKey" value="wWAVbEjQKW5WvW1ZJwIeEcLbGxMbvorJKhBNS6bk" />
-    <add key="QiniuBucket" value="puvsa" />-->
+    <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="getuiAppId" value="hx0EPo3rLW7cgwtjySqZl9"/>
+    <add key="getuiAppKey" value="Q1xyIvDKqj5h6DBWuX6rZ2"/>
+    <add key="getuiMasterSecret" value="GrJCA5eYOI6tuthKqVnGA9"/>
+    <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
+    <add key="QiniuBucket" value="uwenda" />
     
-    <add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
+    <!--pro env-->
+    <!--<add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.uwenda.com/POIWebService_release/contentServer/" />
     <add key="ProxyServerIP" value="112.124.14.229:8091" />
     <add key="ProxyServerPort" value="81" />
@@ -61,7 +65,7 @@
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
     <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="puvsa" />
+    <add key="QiniuBucket" value="puvsa" />-->
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
