app store version commit

--- a/Web.config
+++ b/Web.config
@@ -24,9 +24,29 @@
     <add key="RSF_HOST" value="http://rsf.Qbox.me" />
 
     <add key="MAX_SESSION_USER" value="10" />
+
+    <!--app store env-->
+    <add key="DNSServer" value="http://www.uwenda.com/POIWebService/dnsServer/interface.php" />
+    <add key="ContentServer" value="http://www.uwenda.com/POIWebService/contentServer/" />
+    <add key="ProxyServerIP" value="218.244.132.113:8093" />
+    <add key="ProxyServerPort" value="81" />
+    <add key="ProxyPort" value="8093" />
+    <add key="ProxyHost" value="http://218.244.132.113" />
+    <add key="DbHost" value="uwendadb.mysql.rds.aliyuncs.com" />
+    <add key="DbName" value="uwenda" />
+    <add key="DbUsername" value="poi" />
+    <add key="DbPassword" value="public11223" />
+    <add key="RedisHost" value="112.124.46.40"/>
+    <add key="RedisPort" value="6379" />
+    <add key="WxServer" value="http://www.uwenda.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="getuiAppId" value="cTiE4taQei9ZuLL38CD3y6"/>
+    <add key="getuiAppKey" value="peVzcsA7TW54xGRlcwyAL6"/>
+    <add key="getuiMasterSecret" value="CsPNxxlLotAQbc2RCurPr"/>
+    <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
+    <add key="QiniuBucket" value="puvsa" />
     
     <!--dev env-->
-    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8091" />
     <add key="ProxyServerPort" value="81" />
@@ -43,7 +63,7 @@
     <add key="getuiAppKey" value="Q1xyIvDKqj5h6DBWuX6rZ2"/>
     <add key="getuiMasterSecret" value="GrJCA5eYOI6tuthKqVnGA9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="uwenda" />
+    <add key="QiniuBucket" value="uwenda" />-->
     
     <!--pro env-->
     <!--<add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
