--- a/Web.config
+++ b/Web.config
@@ -39,11 +39,11 @@
     <add key="RedisHost" value="115.29.207.236"/>
     <add key="RedisPort" value="6379" />
     <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
-    <add key="getuiAppId" value="hx0EPo3rLW7cgwtjySqZl9"/>
-    <add key="getuiAppKey" value="Q1xyIvDKqj5h6DBWuX6rZ2"/>
-    <add key="getuiMasterSecret" value="GrJCA5eYOI6tuthKqVnGA9"/>
+    <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
+    <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
+    <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9 "/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="uwenda" />
+    <add key="QiniuBucket" value="qdaan" />
     
     <!--pro env-->
     <!--<add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
