--- a/Web.config
+++ b/Web.config
@@ -26,6 +26,7 @@
     <add key="MAX_SESSION_USER" value="10" />
     
     <!--dev env-->
+    <add key="ENV" value="develop"/>
     <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8091" />
@@ -46,7 +47,8 @@
     <add key="QiniuBucket" value="qdaan" />
     
     <!--pro env-->
-    <!--<add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
+    <!--<add key="ENV" value="production"/>
+    <add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.uwenda.com/POIWebService_release/contentServer/" />
     <add key="ProxyServerIP" value="112.124.14.229:8091" />
     <add key="ProxyServerPort" value="81" />
